gcc/testsuite/rust/rustc/ui/iterators/invalid-iterator-chain-with-int-infer_dg.rs
fn main() {
    let x = Some(()).iter().map(|()| 1).sum::<f32>();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

